--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-     <parent>
-          <groupId>com.jwebmp.jpms.thirdparty</groupId>
+    <parent>
+        <groupId>com.jwebmp.jpms.thirdparty</groupId>
         <artifactId>third-party-modules</artifactId>
         <version>0.0.0_0-SNAPSHOT</version>
     </parent>
@@ -32,13 +32,17 @@
     <dependencies>
         <dependency>
             <groupId>com.jwebmp.jpms.thirdparty</groupId>
-            <artifactId>javax.activation</artifactId><type>jar</type>
-            </dependency>
+            <artifactId>javax.activation</artifactId>
+            <type>jar</type>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.jwebmp.jpms.thirdparty</groupId>
-            <artifactId>jakarta.validation-api</artifactId><type>jar</type>
-            </dependency>
+            <artifactId>jakarta.validation-api</artifactId>
+            <type>jar</type>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
